// // Copyright (c) 2020 Shorted Ltd Pty.
// //
// // Permission is hereby granted, free of charge, to any person obtaining a copy
// // of this software and associated documentation files (the "Software"), to deal
// // in the Software without restriction, including without limitation the rights
// // to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// // copies of the Software, and to permit persons to whom the Software is
// // furnished to do so, subject to the following conditions:
// //
// // The above copyright notice and this permission notice shall be included in
// // all copies or substantial portions of the Software.
// //
// // THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// // IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// // FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// // AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// // LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// // OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// // THE SOFTWARE.

syntax = "proto3";

package collector.v1;

// option go_package = "github.com/shortedapp/shorted/shortedapis/pkg/shorted/service/collector/v1;collector";

import "validate/validate.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "collectorapi/v1/collector.proto";

import "core/v1/core.proto";
import "google/api/annotations.proto";


option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  info: {
    version: "1.0";
  };
  external_docs: {
    url: "https://github.com/shortedapp/shorted/shortedapis/watcher/v1";
    description: "Collector API";
  }
  schemes: HTTPS;
};

service CollectorService {
  // A unary RPC used to collect a source
  rpc GetSource(GetSourceRequest) returns (GetSourceResponse) {
    option (google.api.http) = {
      post: "/api/v1/collector"
      body: "*"
  };
  }
  
}

// ------------ GET ------------
message GetSourceRequest {
  string url = 1 [(validate.rules).string.uri_ref = true];
  // if not provided we can attempt to discover the format from the given URL
  core.v1.Format format = 2;
  core.v1.Parser parser = 3;
}

message  GetSourceResponse {
  SourceDetails result = 1;
}